# kaggle_adcal_2021

./: .gitignore  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml
conf/: param.ini
kaggle_adcal_2021/: __init__.py
kaggle_adcal_2021/model/: classify_lang.py  config.py  extract_text_info.py  get_tweet.py  make_graph.py  merge_tweet.py  sample.py
kaggle_adcal_2021/utils/: schema.py  template.py  text_preprocess.py  tweet_getter.py
test/unit_test/: test_sample.py
