[tool.poetry]
name = "kaggle_adcal_2021"
version = "1.0.0"
description = "What's this project?"
authors = ["sinchir0"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.7"
gokart = "*"
numpy = "1.18"
pydantic = "^1.8.2"
tweepy = "^4.4.0"
ipdb = "^0.13.9"
lxml = "^4.6.4"
neologdn = "^0.5.1"
fasttext = "^0.9.2"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "entry"
line_length = 120
py_version = "py37"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.poetry.dev-dependencies]
pysen = {version = "^0.10.1", extras = ["lint"]}

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

